--- a/index.html
+++ b/index.html
@@ -645,6 +645,19 @@ nav.sticky {
   transform: scale(1.05);
 }
 
+iframe {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  border: none;
+}
+.hero {
+  position: relative;
+  height: 600px; /* daha yüksek yapabilirsiniz, örn: 700px */
+  width: 100%;
+  overflow: hidden;
+}
 
 
 </style>
@@ -686,14 +699,15 @@ nav.sticky {
 <!-- ANA SAYFA -->
 <section id="home" class="active">
     <div class="hero">
-        <iframe 
-            src="https://www.youtube.com/embed/1I7y5v3N-eQ?autoplay=1&mute=1&loop=1&playlist=1I7y5v3N-eQ&controls=0&modestbranding=1&rel=0"
-            frameborder="0"
-            allow="autoplay; fullscreen"
-            allowfullscreen
-            style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1;">
-        </iframe>
-    </div>
+    <iframe 
+        src="https://www.youtube.com/embed/wL_5Agy-eHc?autoplay=1&mute=1&loop=1&playlist=wL_5Agy-eHc&controls=0&modestbranding=1&rel=0"
+        frameborder="0"
+        allow="autoplay; fullscreen"
+        allowfullscreen
+        style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1;">
+    </iframe>
+</div>
+
 </section>
 
 
@@ -914,6 +928,12 @@ function openPopup(imgElement) {
 function closePopup() {
   document.getElementById("popup").style.display = "none";
 }
+@media (max-width: 768px) {
+  .hero {
+    height: 400px; /* mobilde daha küçük */
+  }
+}
+
 
 </script>
 
