--- a/index.html
+++ b/index.html
@@ -659,7 +659,11 @@ iframe {
   overflow: hidden;
 }
 
+nav a {
+  white-space: nowrap; /* linklerdeki kelimeler satır kırılmaz */
+}
 
+	
 </style>
 </head>
 <body>
@@ -700,12 +704,13 @@ iframe {
 <section id="home" class="active">
     <div class="hero">
     <iframe 
-        src="https://www.youtube.com/embed/wL_5Agy-eHc?autoplay=1&mute=1&loop=1&playlist=wL_5Agy-eHc&controls=0&modestbranding=1&rel=0"
-        frameborder="0"
-        allow="autoplay; fullscreen"
-        allowfullscreen
-        style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1;">
-    </iframe>
+    src="https://www.youtube.com/embed/wL_5Agy-eHc?autoplay=1&loop=1&playlist=wL_5Agy-eHc&controls=1&modestbranding=1&rel=0"
+    frameborder="0"
+    allow="autoplay; fullscreen"
+    allowfullscreen
+    style="width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: -1;">
+</iframe>
+
 </div>
 
 </section>
@@ -775,7 +780,7 @@ iframe {
 <!-- KAZANDIRDIKLARIMIZ -->
 <section id="kazandirdiklarimiz" style="display:none;">
     <h2>KAZANDIRDIKLARIMIZ</h2>
-    <p>Nihat Ramazan: Türk Alman Üniversitesi Enerji Bilimi...</p>
+    <p>Nihat Ramazan: TH Köln Informatik(Almanya)</p>
 </section>
 
 <!-- GALERİ -->
@@ -933,6 +938,17 @@ function closePopup() {
     height: 400px; /* mobilde daha küçük */
   }
 }
+	
+@media (max-width: 768px) {
+  nav {
+    flex-direction: column; /* mobilde dikey menü */
+    gap: 0.5rem;
+  }
+  nav a {
+    white-space: normal; /* mobilde satır kırılabilir */
+    text-align: center;
+  }
+}
 
 
 </script>
@@ -941,3 +957,4 @@ function closePopup() {
 
 </body>
 </html>
+
