--- a/index.html
+++ b/index.html
@@ -663,7 +663,10 @@ iframe {
     height: 400px; /* mobilde daha küçük */
   }
   
-  
+  nav a {
+    white-space: nowrap; /* metin alt satıra geçmesin */
+}
+
 
 </style>
 </head>
@@ -957,4 +960,5 @@ function playVideo() {
 
 </body>
 </html>
+
 
