--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ iframe {
 <!-- KAZANDIRDIKLARIMIZ -->
 <section id="kazandirdiklarimiz" style="display:none;">
     <h2>KAZANDIRDIKLARIMIZ</h2>
-    <p>Nihat Ramazan: Türk Alman Üniversitesi Enerji Bilimi...</p>
+    <p>Nihat Ramazan: TH Köln Informatik(Almanya)</p>
 </section>
 
 <!-- GALERİ -->
@@ -966,3 +966,4 @@ function playVideo() {
 
 </body>
 </html>
+
